--- a/open_api_practice/Base.lproj/Main.storyboard
+++ b/open_api_practice/Base.lproj/Main.storyboard
@@ -19,17 +19,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" contentInsetAdjustmentBehavior="scrollableAxes" indicatorStyle="white" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kya-8V-GUO">
-                                <rect key="frame" x="-20" y="81" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="最新專輯" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whf-ye-ooh" userLabel="New Album Section">
-                                        <rect key="frame" x="8" y="13" width="398" height="24"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" dataMode="prototypes" prefetchingEnabled="NO" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mnA-Sz-4Dz">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mnA-Sz-4Dz">
                                         <rect key="frame" x="0.0" y="45" width="414" height="213"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -183,6 +175,19 @@
                                             <outlet property="prefetchDataSource" destination="TY9-Az-QGB" id="O4N-cS-q78"/>
                                         </connections>
                                     </tableView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J49-sX-hgt">
+                                        <rect key="frame" x="8" y="15" width="398" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="最新專輯">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="OLc-fI-10n" kind="show" identifier="newAlbumList" id="nIO-WL-dFE"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -310,6 +315,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cYB-06-J8U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2206" y="-553"/>
+        </scene>
+        <!--Album List Collection View Controller-->
+        <scene sceneID="IDp-W6-dRU">
+            <objects>
+                <collectionViewController id="OLc-fI-10n" userLabel="Album List Collection View Controller" customClass="AlbumListCollectionViewController" customModule="open_api_practice" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="3ky-VA-4K7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="5GG-nD-zNE">
+                            <size key="itemSize" width="198" height="310"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" reuseIdentifier="album" id="hZb-BJ-Rhh" customClass="AlbumCollectionViewCell" customModule="open_api_practice" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="198" height="310"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="198" height="310"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="album_default" translatesAutoresizingMaskIntoConstraints="NO" id="kHm-ST-Qsh" userLabel="Album Image">
+                                            <rect key="frame" x="29" y="77" width="140" height="140"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="kHm-ST-Qsh" secondAttribute="height" multiplier="1:1" id="j9d-kT-b0q"/>
+                                                <constraint firstAttribute="width" constant="140" id="oKX-uR-eOT"/>
+                                                <constraint firstAttribute="height" constant="140" id="qjC-Ly-LxQ"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="right" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="專輯名稱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5V8-DB-PPf" userLabel="Album Name">
+                                            <rect key="frame" x="30" y="230" width="138" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="5V8-DB-PPf" secondAttribute="height" multiplier="23:10" id="Fza-sp-cDb"/>
+                                                <constraint firstAttribute="height" constant="60" id="ngx-Qy-Ksd"/>
+                                                <constraint firstAttribute="width" constant="138" id="zck-kX-Tz3"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="playlist_name"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailingMargin" secondItem="kHm-ST-Qsh" secondAttribute="trailing" constant="21" id="91q-G5-TQG"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="5V8-DB-PPf" secondAttribute="trailing" constant="22" id="IhI-ZA-EZU"/>
+                                    <constraint firstItem="5V8-DB-PPf" firstAttribute="top" secondItem="kHm-ST-Qsh" secondAttribute="bottom" constant="13" id="VUa-lS-9lf"/>
+                                    <constraint firstItem="kHm-ST-Qsh" firstAttribute="leading" secondItem="hZb-BJ-Rhh" secondAttribute="leadingMargin" constant="21" id="ayp-EV-MOr"/>
+                                    <constraint firstItem="kHm-ST-Qsh" firstAttribute="top" secondItem="hZb-BJ-Rhh" secondAttribute="topMargin" constant="25" id="dKD-T6-BDZ"/>
+                                    <constraint firstItem="5V8-DB-PPf" firstAttribute="leading" secondItem="hZb-BJ-Rhh" secondAttribute="leadingMargin" constant="22" id="jmP-jm-3Nx"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="5V8-DB-PPf" secondAttribute="bottom" constant="12" id="xSL-C4-h0i"/>
+                                </constraints>
+                                <size key="customSize" width="198" height="310"/>
+                                <connections>
+                                    <outlet property="albumImage" destination="kHm-ST-Qsh" id="WjE-ie-Cxj"/>
+                                    <outlet property="albumName" destination="5V8-DB-PPf" id="pxT-N5-clC"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="OLc-fI-10n" id="8XK-fy-mjY"/>
+                            <outlet property="delegate" destination="OLc-fI-10n" id="md1-IW-U4m"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="最新專輯" leftItemsSupplementBackButton="YES" id="oXS-2V-7Bl"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J2Z-yq-HD6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="0.0" y="-553.125"/>
         </scene>
     </scenes>
     <resources>
